--- a/style.css
+++ b/style.css
@@ -1,10 +1,28 @@
+/* REQUIREMENT 4: over 10 css rules (whole document) */
+:root {
+    --main-color: #F7A072;
+    --buttons: #AF5B5B;
+    --Background: #AF5B5B;
+    --Genres: #F9F7F3;
+    --other: #EDDEA4;
+
+  }
 
 body {
-    /* background: #121212 */
+    background: linear-gradient(to bottom, #593F62, #EDDEA4);
+
+}
+
+#search-form {
+    margin: 0;
+  }
+
+#page-buttons {
+    display: flex;
 }
 
 #search-bar {
-    margin-left: 10vw;
+    margin-left: 1.5%;
     display: flex;
     align-items: center;
 }
@@ -12,23 +30,25 @@ body {
 #search-bar h1 {
     font-size: 22px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    background-color: #f4c518;
+    background-color: var(--main-color);
     padding: 5px 8px 5px 8px;
     border-radius: 5px;
 }
 
-#search-bar input {
+input {
     margin-left: 20px;
     height: 30px;
     width: 70px;
     border: 5px;
 }
 
+/* REQUIREMENT 6: use grid */
 #movies-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-gap: 20px;
-    margin: 2rem auto;
+    grid-gap: 10px;
+    margin: 4%;
+    margin-top: 20px;
+    width: 85%;
 }
 
 .movie-card {
@@ -36,10 +56,16 @@ body {
     border-radius: 10px;
     margin-left: 50%;
     margin-right: 20%;
+    background-color: var(--Background);
 }
 
 .movie-card img {
-    width: 90%;
+    width: 100%;
+}
+
+.movie-card img:hover {
+    border: 10px black;
+    padding: 5px;
 }
 
 .movie-card h1 {
@@ -51,24 +77,159 @@ body {
 
 form {
     border: 2px;
+    /* width : 0%; */
 }
 
+#search-input {
+    background-color: var(--);
+    border-radius: 6px;
+}
+
+#search-bar {
+    width: 500px;
+}
+
+/* REQUIREMENT 5: use flexbox */
 #sidebar {
+    display: flex;
     position: absolute;
-    margin: 15px 20px 3px 20px;
+    flex-direction: column;
+    margin-left: 1.5%;
+    margin-top: 15px;
+    width: 15%;
+    justify-content: space-between;
+
 }
 
 #sidebar p {
-    margin-bottom: 30px;
-    background-color: gray;
+    margin-bottom: 10px;
+    background-color: var(--buttons);
     padding: 15px 10px;
+    color: var(--other);
+    margin: 5px;
+    border-radius: 4px;
+    align-items: center;
+    justify-content: center;
+
+    border: 1px solid black;
+    padding: 10px;  
 }
 
-#Genres {
-    display: flex;
-    width: 97%;
+#sidebar p:hover {
+    color: white;
+}
+
+#page-num {
+    position:relative;
+    top: -12px;
+    color: var(--Background);
     margin-left: 5px;
+    margin-right: 5px;
+
+}
+
+#genres {
+   display: flex;
+    width: 94%;
+    margin-left: 10px;
+    /* justify-content: end; */
     justify-content: space-between;
-    background-color: gray;
+    background-color: var(--Genres);
     padding: 10px;
+    border-radius: 3px;
+     height: 30px;
+}
+
+#description {
+    display: none;
+}
+
+.movie-card:hover #description {
+    /* display: inline; */
+}
+
+input {
+    padding-right: 130px;
+    width: 150px;
+}
+
+/*  REQUIREMENT 7: at least 2 media queries (I used 4) */
+/* MEDIA QUERIES */
+
+/* show one card */
+@media screen and (max-width: 400px) {
+    body {
+        /* background-color: lightblue; */
+    }
+
+    #movies-grid {
+        grid-template-columns: repeat(1, 1fr);
+        width: 100%;
+        margin-left: none;
+        margin-top: 90px;
+    }
+
+    #search-bar {
+        margin-left: 0px;
+    }
+
+    #sidebar {
+        flex-direction: row;
+        width: 90%;
+    }
+    .movie-card {
+        width: 100%;
+        border-radius: 10px;
+        margin-left: 0%;
+        margin-right: 0%;
+    }
+
+    #search-input {
+        width: 120px;
+        padding-right: 20px
+    }
+}
+
+/* show two cards */
+@media screen and (min-width: 401px) and (max-width: 700px) {
+    body {
+        /* background-color: green; */
+    }
+
+    #movies-grid {
+        grid-template-columns: repeat(2, 1fr);
+        width: 78%;
+
+    }
+
+    #sidebar {
+        width: 20%;
+    }
+}
+
+/* show three cards */
+@media screen and (min-width: 701px) and (max-width: 900px) {
+    body {
+        /* background-color: yellow; */
+    }
+
+    #movies-grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+/* show four cards */
+@media screen and (min-width: 901px) {
+    body {
+        /* background-color: orange; */
+    }
+
+    #movies-grid {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    #sidebar {
+        margin-left: 5px;
+        width: 13%;
+    }
 }
